--- a/media.css
+++ b/media.css
@@ -1,26 +1,25 @@
 @media (max-width: 330px) {
-    body {
-      overflow-x: hidden ;
-    }
-    .mid-sec-five {
-      padding: 0;
-    }
-    
+  body {
+    overflow-x: hidden;
   }
+  .mid-sec-five {
+    padding: 0;
+  }
+}
 @media (max-width: 400px) {
   .mid-sec-one,
   .mid-sec-two,
   .mid-sec-three,
   .mid-sec-four {
-    padding: 0 ;
+    padding: 0;
     height: 100%;
   }
   .sec-one-text-box {
-    width: 100% ;
+    width: 100%;
     text-align: justify;
   }
   .bm {
-    height: 32rem ;
+    height: 32rem;
   }
   .intro-cap {
     font-size: 2.5rem;
@@ -38,7 +37,7 @@
     margin-bottom: 2rem;
   }
   .mid-sec-two-row {
-    justify-content: center ;
+    justify-content: center;
   }
   .card {
     margin-top: 2rem;
@@ -46,107 +45,64 @@
   .card04 {
     margin-bottom: 2rem;
   }
-  .right-element {
-    float: none ;
-  }
-  .timeline-element-box {
-    height: auto ;
-  }
-  .timeline::before {
-    left: 6% ;
-  }
-  #ele-one::after {
-    bottom: 19rem ;
-    left: -3.5rem ;
-  }
-  #ele-two::after {
-    bottom: 13rem ;
-    left: -3.5rem ;
-  }
-  #ele-three::after,
-  #ele-four::after {
-    bottom: 20rem ;
-    left: -3.5rem ;
-  }
-  #ele-five::after {
-    bottom: 21rem ;
-    left: -3.5rem ;
-  }
-  #ele-six::after {
-    bottom: 18rem ;
-    left: -3.5rem ;
-  }
-  #ele-seven::after {
-    bottom: 18rem ;
-    left: -3.5rem ;
-  }
-  #ele-eight::after {
-    bottom: 20rem ;
-    left: -3.5rem ;
-  }
-  #ele-one {
-    margin-top: 2rem;
-  }
-  .element-content {
-    margin-left: 2rem ;
-    width: 80% ;
-  }
   .mid-sec-four-row {
-    margin-left: auto ;
-    margin-right: auto ;
+    margin-left: auto;
+    margin-right: auto;
   }
   .row-one,
   .row-two,
   .row-three {
-    margin-left: auto ;
-    margin-right: auto ;
-    text-align: center ;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
   .row > * {
-    margin-bottom: 2rem ;
+    margin-bottom: 2rem;
   }
 }
-@media(max-width:500px){
-  .line-five{
-    width: 13rem!important;
+@media (max-width: 500px) {
+  .line-five {
+    width: 13rem !important;
   }
-  #my-img{
-    margin-left:6rem!important;
+  #my-img {
+    margin-left: 6rem !important;
     height: 10rem;
     width: 10rem;
   }
-  .square{
-    height:200px!important;
-    width:200px!important;
+  .square {
+    height: 200px !important;
+    width: 200px !important;
   }
-  .row-one, .row-two, .row-three {
-    margin-left:-7rem!important;
-  }
-  .line{
-    width:18rem;
+  /* .row-one,
+  .row-two,
+  .row-three {
+    margin-left: -7rem !important;
+  } */
+  .line {
+    width: 18rem;
   }
 }
 @media (max-width: 900px) {
   .sec-one-text-box {
-    width: 100% ;
+    width: 100%;
     text-align: justify;
   }
   .short-intro {
     text-align: justify;
     margin-top: 2rem;
-    width: 100% ;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
-    text-align: unset ;
+    text-align: unset;
   }
   .top-cap {
     margin: 0;
     padding: 0;
-    font-size: 4.5rem ;
+    font-size: 4.5rem;
   }
   .top-cap-dsp {
-    font-size: 1.5rem ;
+    font-size: 1.5rem;
     color: var(--dark);
     font-weight: bold;
     text-transform: uppercase;
@@ -156,239 +112,164 @@
     transform: translateX(-10%);
   }
   .card {
-    margin-top: 2rem ;
+    margin-top: 2rem;
   }
   .card-header {
-    width: auto ;
-    height: auto ;
+    width: auto;
+    height: auto;
   }
   .mid-sec-two-row > * {
-    margin-left: auto ;
-    margin-right: auto ;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .bm {
-    height: 45rem ;
-    margin-top: -10rem ;
-  }
-  .element-content {
-    width: 100% ;
-  }
-  .timeline-element-box {
-    height: auto ;
-    margin-left: 1rem;
-  }
-  .timeline::before {
-    left: 6% ;
-  }
-  .right-element {
-    float: none ;
-  }
-  #ele-one::after, #ele-two::after, #ele-three::after, #ele-four::after, #ele-five::after, #ele-six::after, #ele-seven::after, #ele-eight::after{
-    display:none;
-  }
-  /* #ele-one::after {
-    bottom: 19rem ;
-    left: -3.5rem ;
-  }
-  #ele-two::after {
-    bottom: 13rem ;
-    left: -3.5rem ;
-  }
-  #ele-three::after,
-  #ele-four::after {
-    bottom: 20rem ;
-    left: -3.5rem ;
-  }
-  #ele-five::after {
-    bottom: 21rem ;
-    left: -3.5rem ;
-  }
-  #ele-six::after {
-    bottom: 18rem ;
-    left: -3.5rem ;
-  }
-  #ele-seven::after {
-    bottom: 18rem ;
-    left: -3.5rem ;
-  }
-  #ele-eight::after {
-    bottom: 20rem ;
-    left: -3.5rem ;
-  }
-  #ele-one {
-    margin-top: 2rem;
-  } */
-  .mid-sec-four-row {
-    margin-top: none ;
-    width: auto ;
-  }
-  .four-sub-cap {
-    font-size: 1.3rem ;
-  }
-  .row-one,
-  .row-two,
-  .row-three {
-    margin-left: auto ;
-    margin-right: auto ;
-    text-align: center ;
-  }
-  .row > * {
-    margin-bottom: 2rem ;
-  }
-  .pro-block{
-   margin: 0 auto 2rem auto;
-  
-  }
-}
-@media screen and (max-width: 770px) {
-  body {
-    overflow-x: hidden;
-  }
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    display: flex;
-    flex-direction: Column;
-    background-color: var(--themeDarker);
-    align-items: center;
-    z-index: 1000;
-    width: 80% ;
-    /*  transform:translateX(100%); */
-    transform: scale(0);
-    transition: transform 0.5s ease-in;
-  }
-  .nav-links li {
-    opacity: 0;
-  }
-  .burger {
-    display: block ;
-    cursor: pointer;
-  }
-  .bm{
-    height: 46rem;
+    height: 45rem;
     margin-top: -10rem;
   }
-  .sec-one-text-box{
-    width:100%;
-    margin:auto;
+  .element-content {
+    width: 100%;
   }
-  #my-img{
-    
-    margin-left:11rem;
+  .mid-sec-four-row {
+    margin-top: none;
+    width: auto;
   }
-  .card{
-    margin-bottom:2rem;
+  .four-sub-cap {
+    font-size: 1.3rem;
   }
-  #ele-one::after{
-    bottom:21rem;
-    left:22.8rem;
+  /*  .row-one,
+  .row-two,
+  .row-three {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+  } */
+  .row > * {
+    margin-bottom: 2rem;
   }
-  #ele-two::after{
-    bottom:18rem;
-    
-  }
-  #ele-three::after{
-    bottom:23rem;
-    left:22.8rem;
-  }
-  #ele-five::after{
-    bottom:23rem;
-    left:22.8rem;
-  }
-  #ele-seven::after{
-    bottom:21rem;
-    left:22.8rem;
-  }
-  #ele-eight::after{
-    bottom:23rem;   
 }
-.pro-block{
-  margin-left: 10%;
-  margin-bottom: 2rem;
-
+.pro-block {
+  margin: 0 auto 2rem auto;
+}
 }
 
-}
 @media screen and (max-width: 1025px) {
-  .nav-links {
-    width: 70% ;
-  }
-  .bm{
+  .bm {
     height: 46rem;
     margin-top: -14.5rem;
   }
-  .sec-one-text-box{
-    width:100%;
-    margin:auto;
+  .sec-one-text-box {
+    width: 100%;
+    margin: auto;
   }
-  #my-img{
-    margin-left:15rem;
+  #my-img {
+    align-self: center;
+    height: 10rem;
+    width: 10rem;
   }
-  .card{
-    margin-bottom:2rem;
+  .card {
+    margin-bottom: 2rem;
   }
-  #ele-one::after{
-    bottom:24rem;
-    left:19rem;
-  }
-  #ele-two::after{
-    bottom:18rem;
-    
-  }
-  #ele-three::after{
-    bottom:25rem;
-    left:19rem;
-  }
-  #ele-four::after{
-    bottom:25.5rem;
-  }
-  #ele-five::after{
-    bottom:26rem;
-    left:19.3rem;
-  }
-  #ele-six::after{
-    bottom:21rem;
-  }
-  #ele-seven::after{
-    bottom:21rem;
-    left:19.5rem;
-  }
-  #ele-eight::after{
-    bottom:25rem;   
-}
-.four-sub-cap{
-  font-size: 1rem;
 
-}
-.four-sub-p{
-  font-size:1.5rem;
-}
-.pro-block{
-  /* margin-left: 25%; */
-  margin-bottom: 2rem;
-
-}
-}
-@media (max-width:800px){
-  .square{
-    height:250px;
-    width:250px;
-    margin-left:5rem;
-  }
-  .port-heading{
+  .four-sub-cap {
     font-size: 1rem;
   }
-  .hashtag{
-    font-size:0.7rem;
-    width:2rem;
-    height:1rem;
+  .four-sub-p {
+    font-size: 1.5rem;
   }
-  .port-ul{
-    font-size:0.5rem;
+  .pro-block {
+    /* margin-left: 25%; */
+    margin-bottom: 2rem;
   }
-  .go-icon{
-    transform:scale(0.5);
+}
+@media (max-width: 800px) {
+  /*
+  .square {
+    height: 250px;
+    width: 400px;
+    margin-left: 5rem;
+  }
+  */
+  .port-heading {
+    font-size: 1rem;
+  }
+  .hashtag {
+    font-size: 0.7rem;
+    width: 2rem;
+    height: 1rem;
+  }
+  .port-ul {
+    font-size: 0.5rem;
+  }
+  .go-icon {
+    transform: scale(0.5);
+  }
+  #my-img {
+    align-self: center;
+    height: 10rem;
+    width: 10rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .bm {
+    height: 46rem;
+    margin-top: -10rem;
+  }
+
+
+  .card {
+    margin-bottom: 2rem;
+  }
+
+  .timeline ul li {
+    width: 50%;
+    margin-bottom: 50px;
+    position: relative;
+  }
+  .timeline ul li:nth-child(odd) {
+    float: left;
+    clear: right;
+    padding-right:20px;
+    /* transform: translateX(-15px); */
+  }
+  .timeline ul li:nth-child(even) {
+    float: right;
+    clear: left;
+    padding-left:20px;
+    /* transform: translateX(15px); */
+  }
+  .timeline::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 2px;
+    left: 50%;
+    margin-left:-1px;
+
+    background-color: gray;
+  }
+  .timeline ul li:after {
+    content: "";
+    position: absolute;
+    z-index: 9999;
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background: aliceblue;
+    top: 0;
+  }
+  .timeline ul li:nth-child(odd):after {
+    transform: translate(50%, -50%);
+    right: 0;
+  }
+  .timeline ul li:nth-child(even):after {
+    transform: translate(-50%, -50%);
+    left: 0;
   }
 }
